# VoxelFlex_T

./: .gitignore  LICENSE  README.md  create_VoxelFlex.sh  create_voxelflex_context.sh  pyproject.toml  requirements.txt  voxelflex_context.txt
input_data/: test_domains.txt  train_domains.txt  val_domains.txt
src/voxelflex/cli/: cli.py
src/voxelflex/cli/commands/: evaluate.py  predict.py  preprocess.py  train.py  visualize.py
src/voxelflex/config/: config.py  default_config.yaml  test_config.yaml
src/voxelflex/data/: data_loader.py  validators.py
src/voxelflex/models/: cnn_models.py
src/voxelflex/utils/: file_utils.py  logging_utils.py  system_utils.py  temp_scaling.py
tests/: test_placeholder.py
